<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".MainActivity">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center_horizontal"
android:orientation="vertical"
android:layout_marginTop="@dimen/_13ssp">

<TextView
    android:layout_width="wrap_content"
    android:layout_marginTop="@dimen/_40sdp"
    android:layout_height="wrap_content"
    android:text="@string/welcome_to_our_world"
    android:textStyle="bold"
    android:textSize="@dimen/_18ssp"
    android:layout_gravity="center"
    android:textColor="@color/primary_text"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_height="wrap_content"
    android:text="@string/login_to_continue"
    android:textStyle="bold"
    android:textSize="@dimen/_12ssp"
    android:layout_gravity="center"
    android:textColor="@color/secondary_text"/>

<EditText
    android:id="@+id/username_login"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_45sdp"
    android:hint="@string/user_name"
    android:background="@color/input_background"
    android:textColor="@color/primary_text"
    android:textSize="@dimen/_13ssp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingStart="@dimen/_16sdp"
    android:inputType="textPersonName"
    android:importantForAutofill="no"
    android:layout_marginTop="@dimen/_40sdp"
    android:imeOptions="actionNext"/>

<EditText
    android:id="@+id/password_login"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_45sdp"
    android:hint="@string/password"
    android:background="@color/input_background"
    android:textColor="@color/primary_text"
    android:textSize="@dimen/_13ssp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingStart="@dimen/_16sdp"
    android:inputType="textPassword"
    android:importantForAutofill="no"
    android:layout_marginTop="@dimen/_16sdp"
    android:imeOptions="actionDone"/>
<com.google.android.material.button.MaterialButton
    android:id="@+id/signIn_btn"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:text="@string/sign_in"
    android:textColor="@color/white"
    android:textSize="@dimen/_13ssp"
    android:textStyle="bold"
    app:cornerRadius="@dimen/_8sdp"/>

<TextView
    android:id="@+id/createNewAccount"
    android:layout_width="wrap_content"
    android:layout_marginTop="@dimen/_30sdp"
    android:layout_height="wrap_content"
    android:text="@string/create_new_account"
    android:textStyle="bold"
    android:textSize="@dimen/_12ssp"
    android:layout_gravity="center"
    android:textColor="@color/primary_text"/>
</LinearLayout>
</ScrollView>











