<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="@dimen/_24sdp"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account1"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"
            android:layout_gravity="center"
            android:textColor="@color/primary_text"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_gravity="center">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/BSelectImage"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textStyle="bold"
                android:textSize="@dimen/_7ssp"
                android:layout_gravity="center"
                android:textColor="@color/secondary_text"/>
        </FrameLayout>
        <EditText
            android:id="@+id/Name_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:hint="@string/name"
            android:background="@color/input_background"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_12sdp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/username_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:hint="@string/username"
            android:background="@color/input_background"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_12sdp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/password_SignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:hint="@string/password"
            android:background="@color/input_background"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_12sdp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/password_SignUp1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:hint="@string/confirm_password"
            android:background="@color/input_background"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/_12sdp"
            android:imeOptions="actionDone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"/>
        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in1"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"
            android:textColor="@color/primary_text"/>
    </LinearLayout>
</ScrollView>