<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Definitions">


    <ImageButton
        android:id="@+id/contacts_def"
        android:layout_width="59dp"
        android:layout_height="62dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_contacts" />

    <ImageButton
        android:id="@+id/circle_def"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/contacts_def"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_account_circle_" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="134dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="Definitions"
        android:textColor="@color/primary"
        android:textSize="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/circle_def"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/contacts_def"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/Editname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/input_background"
        android:hint="Edit Name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.254" />

    <EditText
        android:id="@+id/yourPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/input_background"
        android:hint="@string/your_password_now"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/input_background"
        android:hint="@string/edit_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image_btn"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/Editname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.444"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn"
        app:layout_constraintEnd_toEndOf="@+id/image_btn"
        app:layout_constraintStart_toStartOf="@+id/image_btn"
        app:layout_constraintTop_toTopOf="@+id/image_btn" />

    <EditText
        android:id="@+id/ConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/input_background"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <EditText
        android:id="@+id/serverchange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/input_background"
        android:hint="@string/edit_server"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/EditInformation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/edit_information"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="356dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/if_you_edit_your_information_you_disconnected"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditInformation"
        app:layout_constraintVertical_bias="0.833" />

</androidx.constraintlayout.widget.ConstraintLayout>